# xml-sitemap-generator

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
crawler/: __init__.py  site_crawler.py  site_map_generator.py
tests/: test_site_crawler.py  test_site_map_generator.py
