[project]
name = "crawler"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim",email = "maksimgubenin@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "selenium (>=4.35.0,<5.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.1"
coverage = "^7.10.3"
flake8-pyproject = "^1.2.3"
types-tabulate = "^0.9.0"

[tool.black]
line-length = 88
target-version = ["py312"]
include = "\\.pyi?$"
extend-exclude = '''
/(
    \\.venv
    | \\.git
    | __pycache__
    | \\.mypy_cache
    | build
    | dist
    | .venv
    | venv
    | .env
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".venv"]
known_third_party = ["pytest", "tabulate"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, W503, E402, F401"
exclude = ".venv, __pycache__, .git, build, dist "

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "consider-using-f-string",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
